fixed tables, reformatted SBG Unity tables to be more readable and a little less ugly

--- a/styles.css
+++ b/styles.css
@@ -20,11 +20,6 @@ body {
 	border-left-width:1px;
 	border-right-width:1px;
 }
-#frame table {
-	margin-left:50px;
-	padding:5px;
-	border:1px solid gray;
-}
 #frame td {
 	min-width:200px;
 }
@@ -87,7 +82,6 @@ body {
 	
 }
 .gallery {
-	
 	text-align:center;
 }
 .gallery img {
@@ -110,4 +104,12 @@ body {
 	text-align:center;
 	line-height:72px;
 	font-size:18px;
+}
+.controlstable {
+	margin-left:50px;
+	##border:1px solid gray;
+}
+.controlstable td {
+	padding:5px;
+	border-bottom:1px solid gray;
 }
